# personal-finance-datahub

./: DEVELOPMENT_OUTLINE.md  README.md  datahub_config.json  pyproject.toml  toshl_tag_categorization.json
src/: constants.py  run.py
src/datahub_cashflow/: cashflow_main.py
src/datahub_cashflow/transform/: transform_cashflow_data.py
src/datahub_library/: file_handling_lib.py
src/datahub_stocks/: stocks_main.py
src/datahub_stocks/extract/: extract_master_data.py
src/utils/: file_io.py
